@@ -2,6 +2,7 @@ shady-KISS-skin History
 -------------------------------------------
 2016-02-05:
 - Fixed conditions in displaymenudetailrecording
+- Fixed conditions in displaymenudetailepg and tvguideng-detail
 
 2016-02-03:
 - Added wide currentelement in channelsmenu
